Modified HTML and CSS structure for better matchup to the website

--- a/joker.html
+++ b/joker.html
@@ -6,152 +6,126 @@
     <link rel="stylesheet" type="text/css" href="movie.css" />
 </head>
 <body>
-    <div id="banner">
-        <h1>Joker: Folie à Deux (2024)</h1>
-    </div>
+<div id="banner">
+    <img src="Assets_folder/banner.png" alt="Rancid Tomatoes" />
+</div>
 
-    <div id="container">
-        <div id="main-content">
-            <div id="rating-header">
-                <img src="Assets_folder/rottenbig.png" alt="Rotten Tomatoes" />
-                <span id="rating-number">32%</span>
+
+<div id="container">
+
+    <div id="main-panel">
+
+        <div id="rating-header">
+            <img src="Assets_folder/rottenbig.png" alt="Rotten" />
+        </div>
+
+        <div id="content-split">
+
+            <div id="poster-section">
+                <div class="poster-grid">
+                    <img src="Assets_folder/posters/1.png" alt="Poster 1" />
+                    <img src="Assets_folder/posters/2.png" alt="Poster 2" />
+                    <img src="Assets_folder/posters/3.png" alt="Poster 3" />
+                    <img src="Assets_folder/posters/4.png" alt="Poster 4" />
+                    <img src="Assets_folder/posters/5.png" alt="Poster 5" />
+                    <img src="Assets_folder/posters/6.png" alt="Poster 6" />
+                </div>
             </div>
 
-            <div id="reviews">
-                <div class="review-column">
+            <div id="review-section">
+
+                <div class="review-col">
                     <div class="review-box">
-                        <img src="Assets_folder/rottenbig.png" alt="Rotten" class="review-icon" />
                         <p class="review-quote">"A mesmerizing yet deeply flawed sequel that struggles to find its footing. The musical elements feel forced."</p>
-                        <p class="review-stars">
-                            <img src="Assets_folder/star_full.png" alt="star" />
-                            <img src="Assets_folder/star_full.png" alt="star" />
-                            <img src="Assets_folder/star_nonfull.png" alt="star" />
-                            <img src="Assets_folder/star_nonfull.png" alt="star" />
-                            <img src="Assets_folder/star_nonfull.png" alt="star" />
+                        <p class="review-critic">
+                            <img src="Assets_folder/rotten.gif" alt="Rotten" />
+                            David Ehrlich, IndieWire
                         </p>
-                        <p class="review-critic">David Ehrlich,<br />IndieWire</p>
                     </div>
-
                     <div class="review-box">
-                        <img src="Assets_folder/rottenbig.png" alt="Rotten" class="review-icon" />
-                        <p class="review-quote">"Visually stunning but narratively hollow. The sequel can't decide what it wants to be - art or spectacle."</p>
-                        <p class="review-stars">
-                            <img src="Assets_folder/star_full.png" alt="star" />
-                            <img src="Assets_folder/star_full.png" alt="star" />
-                            <img src="Assets_folder/star_full.png" alt="star" />
-                            <img src="Assets_folder/star_nonfull.png" alt="star" />
-                            <img src="Assets_folder/star_nonfull.png" alt="star" />
+                        <p class="review-quote">"Visually stunning but narratively hollow. The attempt to blend gritty realism with musical fantasy falls flat."</p>
+                        <p class="review-critic">
+                            <img src="Assets_folder/rotten.gif" alt="Rotten" />
+                            Peter Debruge, Variety
                         </p>
-                        <p class="review-critic">Peter Debruge,<br />Variety</p>
                     </div>
-
                     <div class="review-box">
-                        <img src="Assets_folder/rottenbig.png" alt="Rotten" class="review-icon" />
                         <p class="review-quote">"An ambitious misfire. While the performances are commendable, the film lacks the raw power of its predecessor."</p>
-                        <p class="review-stars">
-                            <img src="Assets_folder/star_full.png" alt="star" />
-                            <img src="Assets_folder/star_full.png" alt="star" />
-                            <img src="Assets_folder/star_nonfull.png" alt="star" />
-                            <img src="Assets_folder/star_nonfull.png" alt="star" />
-                            <img src="Assets_folder/star_nonfull.png" alt="star" />
+                        <p class="review-critic">
+                            <img src="Assets_folder/rotten.gif" alt="Rotten" />
+                            Manohla Dargis, NYT
                         </p>
-                        <p class="review-critic">Manohla Dargis,<br />The New York Times</p>
                     </div>
                 </div>
 
-                <div class="review-column">
+                <div class="review-col">
                     <div class="review-box">
-                        <img src="Assets_folder/rottenbig.png" alt="Rotten" class="review-icon" />
-                        <p class="review-quote">"A daring experiment that doesn't quite succeed. The chemistry between the leads can't overcome the meandering narrative."</p>
-                        <p class="review-stars">
-                            <img src="Assets_folder/star_full.png" alt="star" />
-                            <img src="Assets_folder/star_full.png" alt="star" />
-                            <img src="Assets_folder/star_nonfull.png" alt="star" />
-                            <img src="Assets_folder/star_nonfull.png" alt="star" />
-                            <img src="Assets_folder/star_nonfull.png" alt="star" />
+                        <p class="review-quote">"A daring experiment that doesn't quite pay off. The chemistry between the leads is undeniable."</p>
+                        <p class="review-critic">
+                            <img src="Assets_folder/rotten.gif" alt="Rotten" />
+                            Justin Chang, LA Times
                         </p>
-                        <p class="review-critic">Justin Chang,<br />Los Angeles Times</p>
                     </div>
-
                     <div class="review-box">
-                        <img src="Assets_folder/rottenbig.png" alt="Rotten" class="review-icon" />
-                        <p class="review-quote">"Joker: Folie à Deux is a beautifully crafted yet ultimately frustrating experience. It's a film at war with itself."</p>
-                        <p class="review-stars">
-                            <img src="Assets_folder/star_full.png" alt="star" />
-                            <img src="Assets_folder/star_full.png" alt="star" />
-                            <img src="Assets_folder/star_full.png" alt="star" />
-                            <img src="Assets_folder/star_nonfull.png" alt="star" />
-                            <img src="Assets_folder/star_nonfull.png" alt="star" />
+                        <p class="review-quote">"Joker: Folie à Deux is a beautifully shot, yet ultimately frustrating experience. It's a film at war with itself."</p>
+                        <p class="review-critic">
+                            <img src="Assets_folder/rotten.gif" alt="Rotten" />
+                            Robbie Collin, Telegraph
                         </p>
-                        <p class="review-critic">Alonso Duralde,<br />The Telegraph</p>
                     </div>
-
                     <div class="review-box">
-                        <img src="Assets_folder/rottenbig.png" alt="Rotten" class="review-icon" />
                         <p class="review-quote">"A polarizing and provocative piece of cinema. It will undoubtedly divide audiences, but its artistic integrity is unquestionable."</p>
-                        <p class="review-stars">
-                            <img src="Assets_folder/star_full.png" alt="star" />
-                            <img src="Assets_folder/star_full.png" alt="star" />
-                            <img src="Assets_folder/star_full.png" alt="star" />
-                            <img src="Assets_folder/star_nonfull.png" alt="star" />
-                            <img src="Assets_folder/star_nonfull.png" alt="star" />
+                        <p class="review-critic">
+                            <img src="Assets_folder/rotten.gif" alt="Rotten" />
+                            Stephanie Zacharek, Time
                         </p>
-                        <p class="review-critic">Stephanie Zacharek,<br />Time</p>
                     </div>
                 </div>
+
             </div>
         </div>
 
-        <div id="sidebar">
-            <h2>Movie Details</h2>
-            <dl>
-                <dt>Director:</dt>
-                <dd>Todd Phillips</dd>
-
-                <dt>Writers:</dt>
-                <dd>Scott Silver, Todd Phillips</dd>
-
-                <dt>Release Date:</dt>
-                <dd>October 4, 2024</dd>
-
-                <dt>Runtime:</dt>
-                <dd>138 minutes</dd>
-
-                <dt>Genre:</dt>
-                <dd>Crime, Drama, Musical, Thriller</dd>
-
-                <dt>Rating:</dt>
-                <dd>R</dd>
-            </dl>
-
-            <h2>Cast &amp; Crew</h2>
-            <p>Joaquin Phoenix as Arthur Fleck / Joker<br />
-            Lady Gaga as Harleen Quinzel / Harley<br />
-            Brendan Gleeson<br />
-            Catherine Keener<br />
-            Zazie Beetz</p>
-
-            <h2>Information</h2>
-            <p>Studio: Warner Bros. Pictures<br />
-            Budget: $200 million (estimated)<br />
-            Box Office: TBD</p>
-
-            <div id="social-icons">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6f/Logo_of_Twitter.svg/512px-Logo_of_Twitter.svg.png" alt="Twitter" style="width:20px; height:20px;" />
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e7/Instagram_logo_2016.svg/512px-Instagram_logo_2016.svg.png" alt="Instagram" style="width:20px; height:20px;" />
-            </div>
-
-            <p id="watch-trailer"><a href="https://www.youtube.com/watch?v=example">Watch Trailer</a></p>
+        <div id="bottom-bar">
+            (1-6) of 248
         </div>
     </div>
 
-    <div id="bottom-bar">
-        <p>Total Reviews: 248 | Fresh: 79 | Rotten: 169</p>
-    </div>
+    <div id="sidebar">
+        <h2>Movie Details</h2>
+        <dl>
+            <dt>Director:</dt> <dd>Todd Phillips</dd>
+            <dt>Writers:</dt> <dd>Scott Silver, Todd Phillips</dd>
+            <dt>Release Date:</dt> <dd>October 4, 2024</dd>
+            <dt>Runtime:</dt> <dd>2h 18m</dd>
+            <dt>Genre:</dt> <dd>Crime, Drama, Musical, Thriller</dd>
+            <dt>Rating:</dt> <dd>R</dd>
+        </dl>
 
-    <div id="validators">
-        <a href="https://validator.w3.org/check/referer"><img src="https://www.w3.org/Icons/valid-xhtml11" alt="Valid XHTML 1.1" /></a>
-        <a href="https://jigsaw.w3.org/css-validator/check/referer"><img src="https://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS" /></a>
+        <h2>Cast &amp; Crew</h2>
+        <ul>
+            <li>Joaquin Phoenix</li>
+            <li>Lady Gaga</li>
+            <li>Brendan Gleeson</li>
+            <li>Catherine Keener</li>
+        </ul>
+
+        <h2>Information</h2>
+        <dl>
+            <dt>Studio:</dt> <dd>Warner Bros.</dd>
+            <dt>Budget:</dt> <dd>$200 million</dd>
+        </dl>
+
+        <p id="watch-trailer"><a href="#">Watch Trailer</a></p>
     </div>
+</div>
+
+<div id="footer-bar">
+    Total Reviews: 248 | Fresh: 79 | Rotten: 169
+</div>
+
+<div id="validators">
+    <a href="https://validator.w3.org/check/referer"><img src="https://www.w3.org/Icons/valid-xhtml11" alt="Valid XHTML 1.1" /></a>
+    <a href="https://jigsaw.w3.org/css-validator/check/referer"><img src="https://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS" /></a>
+</div>
 </body>
 </html>
