Banner and css adjustments

--- a/joker.html
+++ b/joker.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>MMR - Joker: Folie à Deux Review</title>
+    <title>Joker: Folie à Deux - Rancid Tomatoes</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link rel="stylesheet" type="text/css" href="movie.css" />
 </head>
 <body>
+
 <div id="banner">
     <img src="Assets_folder/banner.png" alt="Rancid Tomatoes" />
 </div>
@@ -20,7 +21,6 @@
         </div>
 
         <div id="content-split">
-
             <div id="poster-section">
                 <div class="poster-grid">
                     <img src="Assets_folder/posters/1.png" alt="Poster 1" />
@@ -33,7 +33,6 @@
             </div>
 
             <div id="review-section">
-
                 <div class="review-col">
                     <div class="review-box">
                         <p class="review-quote">"A mesmerizing yet deeply flawed sequel that struggles to find its footing. The musical elements feel forced."</p>
@@ -81,7 +80,6 @@
                         </p>
                     </div>
                 </div>
-
             </div>
         </div>
 
