Header image fic

--- a/joker.html
+++ b/joker.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Joker: Folie à Deux - Rancid Tomatoes</title>
+    <title>Joker: Folie à Deux Review (2024)</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link rel="stylesheet" type="text/css" href="movie.css" />
 </head>
 <body>
-
 <div id="banner">
     <img src="Assets_folder/banner.png" alt="Rancid Tomatoes" />
 </div>
