--- a/joker.html
+++ b/joker.html
@@ -15,12 +15,11 @@
 
     <div id="main-panel">
 
-        <div id="rating-header">
-            <img src="Assets_folder/rottenbig.png" alt="Rotten" />
-        </div>
-
         <div id="content-split">
             <div id="poster-section">
+                <div id="rating-header">
+                    <img src="Assets_folder/rottenbig.png" alt="Rotten 32%" />
+                </div>
                 <div class="poster-grid">
                     <img src="Assets_folder/posters/1.png" alt="Poster 1" />
                     <img src="Assets_folder/posters/2.png" alt="Poster 2" />
@@ -39,6 +38,7 @@
                             <img src="Assets_folder/rotten.gif" alt="Rotten" />
                             David Ehrlich, IndieWire
                         </p>
+                        <span class="review-score">2/5</span>
                     </div>
                     <div class="review-box">
                         <p class="review-quote">"Visually stunning but narratively hollow. The attempt to blend gritty realism with musical fantasy falls flat."</p>
@@ -46,6 +46,7 @@
                             <img src="Assets_folder/rotten.gif" alt="Rotten" />
                             Peter Debruge, Variety
                         </p>
+                        <span class="review-score">2.5/4</span>
                     </div>
                     <div class="review-box">
                         <p class="review-quote">"An ambitious misfire. While the performances are commendable, the film lacks the raw power of its predecessor."</p>
@@ -53,6 +54,7 @@
                             <img src="Assets_folder/rotten.gif" alt="Rotten" />
                             Manohla Dargis, NYT
                         </p>
+                        <span class="review-score">C+</span>
                     </div>
                 </div>
 
@@ -63,6 +65,7 @@
                             <img src="Assets_folder/rotten.gif" alt="Rotten" />
                             Justin Chang, LA Times
                         </p>
+                        <span class="review-score">2/5</span>
                     </div>
                     <div class="review-box">
                         <p class="review-quote">"Joker: Folie à Deux is a beautifully shot, yet ultimately frustrating experience. It's a film at war with itself."</p>
@@ -70,6 +73,7 @@
                             <img src="Assets_folder/rotten.gif" alt="Rotten" />
                             Robbie Collin, Telegraph
                         </p>
+                        <span class="review-score">2.5/4</span>
                     </div>
                     <div class="review-box">
                         <p class="review-quote">"A polarizing and provocative piece of cinema. It will undoubtedly divide audiences, but its artistic integrity is unquestionable."</p>
@@ -77,6 +81,7 @@
                             <img src="Assets_folder/rotten.gif" alt="Rotten" />
                             Stephanie Zacharek, Time
                         </p>
+                        <span class="review-score">C+</span>
                     </div>
                 </div>
             </div>
