--- a/joker.html
+++ b/joker.html
@@ -34,26 +34,31 @@
                 <div class="review-col">
                     <div class="review-box">
                         <p class="review-quote">"A mesmerizing yet deeply flawed sequel that struggles to find its footing. The musical elements feel forced."</p>
-                        <p class="review-critic">
-                            <img src="Assets_folder/rotten.gif" alt="Rotten" />
-                            David Ehrlich, IndieWire
-                        </p>
+                        <p class="review-critic">David Ehrlich, IndieWire</p>
+                        <div class="star-rating">
+                            <img src="Assets_folder/star_full.png" alt="Full Star" />
+                            <img src="Assets_folder/star_nonfull.png" alt="Empty Star" />
+                            <img src="Assets_folder/star_nonfull.png" alt="Empty Star" />
+                            <img src="Assets_folder/star_nonfull.png" alt="Empty Star" />
+                            <img src="Assets_folder/star_nonfull.png" alt="Empty Star" />
+                        </div>
                         <span class="review-score">2/5</span>
                     </div>
                     <div class="review-box">
                         <p class="review-quote">"Visually stunning but narratively hollow. The attempt to blend gritty realism with musical fantasy falls flat."</p>
-                        <p class="review-critic">
-                            <img src="Assets_folder/rotten.gif" alt="Rotten" />
-                            Peter Debruge, Variety
-                        </p>
+                        <p class="review-critic">Peter Debruge, Variety</p>
+                        <div class="star-rating">
+                            <img src="Assets_folder/star_full.png" alt="Full Star" />
+                            <img src="Assets_folder/star_full.png" alt="Full Star" />
+                            <img src="Assets_folder/star_full.png" alt="Full Star" />
+                            <img src="Assets_folder/star_nonfull.png" alt="Empty Star" />
+                            <img src="Assets_folder/star_nonfull.png" alt="Empty Star" />
+                        </div>
                         <span class="review-score">2.5/4</span>
                     </div>
                     <div class="review-box">
                         <p class="review-quote">"An ambitious misfire. While the performances are commendable, the film lacks the raw power of its predecessor."</p>
-                        <p class="review-critic">
-                            <img src="Assets_folder/rotten.gif" alt="Rotten" />
-                            Manohla Dargis, NYT
-                        </p>
+                        <p class="review-critic">Manohla Dargis, NYT</p>
                         <span class="review-score">C+</span>
                     </div>
                 </div>
@@ -61,34 +66,35 @@
                 <div class="review-col">
                     <div class="review-box">
                         <p class="review-quote">"A daring experiment that doesn't quite pay off. The chemistry between the leads is undeniable."</p>
-                        <p class="review-critic">
-                            <img src="Assets_folder/rotten.gif" alt="Rotten" />
-                            Justin Chang, LA Times
-                        </p>
+                        <p class="review-critic">Justin Chang, LA Times</p>
+                        <div class="star-rating">
+                            <img src="Assets_folder/star_full.png" alt="Full Star" />
+                            <img src="Assets_folder/star_full.png" alt="Full Star" />
+                            <img src="Assets_folder/star_full.png" alt="Full Star" />
+                            <img src="Assets_folder/star_nonfull.png" alt="Empty Star" />
+                            <img src="Assets_folder/star_nonfull.png" alt="Empty Star" />
+                        </div>
                         <span class="review-score">2/5</span>
                     </div>
                     <div class="review-box">
                         <p class="review-quote">"Joker: Folie à Deux is a beautifully shot, yet ultimately frustrating experience. It's a film at war with itself."</p>
-                        <p class="review-critic">
-                            <img src="Assets_folder/rotten.gif" alt="Rotten" />
-                            Robbie Collin, Telegraph
-                        </p>
+                        <p class="review-critic">Robbie Collin, Telegraph</p>
+                        <div class="star-rating">
+                            <img src="Assets_folder/star_full.png" alt="Full Star" />
+                            <img src="Assets_folder/star_full.png" alt="Full Star" />
+                            <img src="Assets_folder/star_full.png" alt="Full Star" />
+                            <img src="Assets_folder/star_nonfull.png" alt="Empty Star" />
+                            <img src="Assets_folder/star_nonfull.png" alt="Empty Star" />
+                        </div>
                         <span class="review-score">2.5/4</span>
                     </div>
                     <div class="review-box">
                         <p class="review-quote">"A polarizing and provocative piece of cinema. It will undoubtedly divide audiences, but its artistic integrity is unquestionable."</p>
-                        <p class="review-critic">
-                            <img src="Assets_folder/rotten.gif" alt="Rotten" />
-                            Stephanie Zacharek, Time
-                        </p>
+                        <p class="review-critic">Stephanie Zacharek, Time</p>
                         <span class="review-score">C+</span>
                     </div>
                 </div>
             </div>
-        </div>
-
-        <div id="bottom-bar">
-            (1-6) of 248
         </div>
     </div>
 
