Added more padding to look like the reference.png file

--- a/joker.html
+++ b/joker.html
@@ -35,24 +35,24 @@
                     <div class="review-box">
                         <p class="review-quote">"A mesmerizing yet deeply flawed sequel that struggles to find its footing. The musical elements feel forced."</p>
                         <p class="review-critic">David Ehrlich, IndieWire</p>
-                        <div class="star-rating">
-                            <img src="Assets_folder/star_full.png" alt="Full Star" />
-                            <img src="Assets_folder/star_nonfull.png" alt="Empty Star" />
-                            <img src="Assets_folder/star_nonfull.png" alt="Empty Star" />
-                            <img src="Assets_folder/star_nonfull.png" alt="Empty Star" />
-                            <img src="Assets_folder/star_nonfull.png" alt="Empty Star" />
+                        <div class="star-rating" role="img" aria-label="Rating: 1 out of 5 stars">
+                            <img src="Assets_folder/star_full.png" alt="" />
+                            <img src="Assets_folder/star_nonfull.png" alt="" />
+                            <img src="Assets_folder/star_nonfull.png" alt="" />
+                            <img src="Assets_folder/star_nonfull.png" alt="" />
+                            <img src="Assets_folder/star_nonfull.png" alt="" />
                         </div>
                         <span class="review-score">2/5</span>
                     </div>
                     <div class="review-box">
                         <p class="review-quote">"Visually stunning but narratively hollow. The attempt to blend gritty realism with musical fantasy falls flat."</p>
                         <p class="review-critic">Peter Debruge, Variety</p>
-                        <div class="star-rating">
-                            <img src="Assets_folder/star_full.png" alt="Full Star" />
-                            <img src="Assets_folder/star_full.png" alt="Full Star" />
-                            <img src="Assets_folder/star_full.png" alt="Full Star" />
-                            <img src="Assets_folder/star_nonfull.png" alt="Empty Star" />
-                            <img src="Assets_folder/star_nonfull.png" alt="Empty Star" />
+                        <div class="star-rating" role="img" aria-label="Rating: 3 out of 5 stars">
+                            <img src="Assets_folder/star_full.png" alt="" />
+                            <img src="Assets_folder/star_full.png" alt="" />
+                            <img src="Assets_folder/star_full.png" alt="" />
+                            <img src="Assets_folder/star_nonfull.png" alt="" />
+                            <img src="Assets_folder/star_nonfull.png" alt="" />
                         </div>
                         <span class="review-score">2.5/4</span>
                     </div>
@@ -67,24 +67,24 @@
                     <div class="review-box">
                         <p class="review-quote">"A daring experiment that doesn't quite pay off. The chemistry between the leads is undeniable."</p>
                         <p class="review-critic">Justin Chang, LA Times</p>
-                        <div class="star-rating">
-                            <img src="Assets_folder/star_full.png" alt="Full Star" />
-                            <img src="Assets_folder/star_full.png" alt="Full Star" />
-                            <img src="Assets_folder/star_full.png" alt="Full Star" />
-                            <img src="Assets_folder/star_nonfull.png" alt="Empty Star" />
-                            <img src="Assets_folder/star_nonfull.png" alt="Empty Star" />
+                        <div class="star-rating" role="img" aria-label="Rating: 3 out of 5 stars">
+                            <img src="Assets_folder/star_full.png" alt="" />
+                            <img src="Assets_folder/star_full.png" alt="" />
+                            <img src="Assets_folder/star_full.png" alt="" />
+                            <img src="Assets_folder/star_nonfull.png" alt="" />
+                            <img src="Assets_folder/star_nonfull.png" alt="" />
                         </div>
                         <span class="review-score">2/5</span>
                     </div>
                     <div class="review-box">
                         <p class="review-quote">"Joker: Folie à Deux is a beautifully shot, yet ultimately frustrating experience. It's a film at war with itself."</p>
                         <p class="review-critic">Robbie Collin, Telegraph</p>
-                        <div class="star-rating">
-                            <img src="Assets_folder/star_full.png" alt="Full Star" />
-                            <img src="Assets_folder/star_full.png" alt="Full Star" />
-                            <img src="Assets_folder/star_full.png" alt="Full Star" />
-                            <img src="Assets_folder/star_nonfull.png" alt="Empty Star" />
-                            <img src="Assets_folder/star_nonfull.png" alt="Empty Star" />
+                        <div class="star-rating" role="img" aria-label="Rating: 3 out of 5 stars">
+                            <img src="Assets_folder/star_full.png" alt="" />
+                            <img src="Assets_folder/star_full.png" alt="" />
+                            <img src="Assets_folder/star_full.png" alt="" />
+                            <img src="Assets_folder/star_nonfull.png" alt="" />
+                            <img src="Assets_folder/star_nonfull.png" alt="" />
                         </div>
                         <span class="review-score">2.5/4</span>
                     </div>
@@ -101,12 +101,18 @@
     <div id="sidebar">
         <h2>Movie Details</h2>
         <dl>
-            <dt>Director:</dt> <dd>Todd Phillips</dd>
-            <dt>Writers:</dt> <dd>Scott Silver, Todd Phillips</dd>
-            <dt>Release Date:</dt> <dd>October 4, 2024</dd>
-            <dt>Runtime:</dt> <dd>2h 18m</dd>
-            <dt>Genre:</dt> <dd>Crime, Drama, Musical, Thriller</dd>
-            <dt>Rating:</dt> <dd>R</dd>
+            <dt>Director:</dt>
+            <dd>Todd Phillips</dd>
+            <dt>Writers:</dt>
+            <dd>Scott Silver, Todd Phillips</dd>
+            <dt>Release Date:</dt>
+            <dd>October 4, 2024</dd>
+            <dt>Runtime:</dt>
+            <dd>2h 18m</dd>
+            <dt>Genre:</dt>
+            <dd>Crime, Drama, Musical, Thriller</dd>
+            <dt>Rating:</dt>
+            <dd>R</dd>
         </dl>
 
         <h2>Cast &amp; Crew</h2>
@@ -119,8 +125,10 @@
 
         <h2>Information</h2>
         <dl>
-            <dt>Studio:</dt> <dd>Warner Bros.</dd>
-            <dt>Budget:</dt> <dd>$200 million</dd>
+            <dt>Studio:</dt>
+            <dd>Warner Bros.</dd>
+            <dt>Budget:</dt>
+            <dd>$200 million</dd>
         </dl>
 
         <p id="watch-trailer"><a href="#">Watch Trailer</a></p>
