Added sidebar content, and fixed footer colors

--- a/joker.html
+++ b/joker.html
@@ -117,10 +117,10 @@
 
         <h2>Cast &amp; Crew</h2>
         <ul>
-            <li>Joaquin Phoenix</li>
-            <li>Lady Gaga</li>
-            <li>Brendan Gleeson</li>
-            <li>Catherine Keener</li>
+            <li>Joaquin Phoenix as Arthur Fleck / Joker</li>
+            <li>Lady Gaga as Harleen Quinzel / Harley Quinn</li>
+            <li>Brendan Gleeson as Jackie Sullivan</li>
+            <li>Catherine Keener as Maryanne Stewart</li>
         </ul>
 
         <h2>Information</h2>
@@ -129,7 +129,15 @@
             <dd>Warner Bros.</dd>
             <dt>Budget:</dt>
             <dd>$200 million</dd>
+            <dt>Box Office:</dt>
+            <dd>$206.4 million</dd>
         </dl>
+
+        <div id="social-links">
+            <a href="#" aria-label="Facebook"><span>f</span></a>
+            <a href="#" aria-label="Twitter"><span>𝕏</span></a>
+            <a href="#" aria-label="Instagram"><span>📷</span></a>
+        </div>
 
         <p id="watch-trailer"><a href="#">Watch Trailer</a></p>
     </div>
