fixed the crtici content

--- a/joker.html
+++ b/joker.html
@@ -34,7 +34,7 @@
                 <div class="review-col">
                     <div class="review-box">
                         <p class="review-quote">"A mesmerizing yet deeply flawed sequel that struggles to find its footing. The musical elements feel forced."</p>
-                        <p class="review-critic">David Ehrlich, IndieWire</p>
+                        <p class="review-critic">- David Ehrlich, IndieWire</p>
                         <div class="star-rating" role="img" aria-label="Rating: 1 out of 5 stars">
                             <img src="Assets_folder/star_full.png" alt="" />
                             <img src="Assets_folder/star_nonfull.png" alt="" />
@@ -46,7 +46,7 @@
                     </div>
                     <div class="review-box">
                         <p class="review-quote">"Visually stunning but narratively hollow. The attempt to blend gritty realism with musical fantasy falls flat."</p>
-                        <p class="review-critic">Peter Debruge, Variety</p>
+                        <p class="review-critic">- Peter Debruge, Variety</p>
                         <div class="star-rating" role="img" aria-label="Rating: 3 out of 5 stars">
                             <img src="Assets_folder/star_full.png" alt="" />
                             <img src="Assets_folder/star_full.png" alt="" />
@@ -58,7 +58,7 @@
                     </div>
                     <div class="review-box">
                         <p class="review-quote">"An ambitious misfire. While the performances are commendable, the film lacks the raw power of its predecessor."</p>
-                        <p class="review-critic">Manohla Dargis, NYT</p>
+                        <p class="review-critic">- Manohla Dargis, NYT</p>
                         <span class="review-score">C+</span>
                     </div>
                 </div>
@@ -66,7 +66,7 @@
                 <div class="review-col">
                     <div class="review-box">
                         <p class="review-quote">"A daring experiment that doesn't quite pay off. The chemistry between the leads is undeniable."</p>
-                        <p class="review-critic">Justin Chang, LA Times</p>
+                        <p class="review-critic">- Justin Chang, LA Times</p>
                         <div class="star-rating" role="img" aria-label="Rating: 3 out of 5 stars">
                             <img src="Assets_folder/star_full.png" alt="" />
                             <img src="Assets_folder/star_full.png" alt="" />
@@ -78,7 +78,7 @@
                     </div>
                     <div class="review-box">
                         <p class="review-quote">"Joker: Folie à Deux is a beautifully shot, yet ultimately frustrating experience. It's a film at war with itself."</p>
-                        <p class="review-critic">Robbie Collin, Telegraph</p>
+                        <p class="review-critic">- Robbie Collin, Telegraph</p>
                         <div class="star-rating" role="img" aria-label="Rating: 3 out of 5 stars">
                             <img src="Assets_folder/star_full.png" alt="" />
                             <img src="Assets_folder/star_full.png" alt="" />
@@ -90,7 +90,7 @@
                     </div>
                     <div class="review-box">
                         <p class="review-quote">"A polarizing and provocative piece of cinema. It will undoubtedly divide audiences, but its artistic integrity is unquestionable."</p>
-                        <p class="review-critic">Stephanie Zacharek, Time</p>
+                        <p class="review-critic">- Stephanie Zacharek, Time</p>
                         <span class="review-score">C+</span>
                     </div>
                 </div>
