Fixed poster section

--- a/joker.html
+++ b/joker.html
@@ -21,12 +21,30 @@
                     <img src="Assets_folder/rottenbig.png" alt="Rotten 32%" />
                 </div>
                 <div class="poster-grid">
-                    <img src="Assets_folder/posters/1.png" alt="Poster 1" />
-                    <img src="Assets_folder/posters/2.png" alt="Poster 2" />
-                    <img src="Assets_folder/posters/3.png" alt="Poster 3" />
-                    <img src="Assets_folder/posters/4.png" alt="Poster 4" />
-                    <img src="Assets_folder/posters/5.png" alt="Poster 5" />
-                    <img src="Assets_folder/posters/6.png" alt="Poster 6" />
+                    <div class="poster-item">
+                        <img src="Assets_folder/posters/1.png" alt="Official Poster 1" />
+                        <p class="poster-label">Official Poster 1</p>
+                    </div>
+                    <div class="poster-item">
+                        <img src="Assets_folder/posters/2.png" alt="Teaser Poster" />
+                        <p class="poster-label">Teaser Poster</p>
+                    </div>
+                    <div class="poster-item">
+                        <img src="Assets_folder/posters/3.png" alt="Character Poster - Joker" />
+                        <p class="poster-label">Character Poster - Joker</p>
+                    </div>
+                    <div class="poster-item">
+                        <img src="Assets_folder/posters/4.png" alt="Official Poster 2" />
+                        <p class="poster-label">Official Poster 2</p>
+                    </div>
+                    <div class="poster-item">
+                        <img src="Assets_folder/posters/5.png" alt="Character Poster - Harley" />
+                        <p class="poster-label">Character Poster - Harley</p>
+                    </div>
+                    <div class="poster-item">
+                        <img src="Assets_folder/posters/6.png" alt="Official Poster 3" />
+                        <p class="poster-label">Official Poster 3</p>
+                    </div>
                 </div>
             </div>
 
