--- a/joker.html
+++ b/joker.html
@@ -4,6 +4,7 @@
     <title>Joker: Folie à Deux Review (2024)</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link rel="stylesheet" type="text/css" href="movie.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
 </head>
 <body>
 <div id="banner">
@@ -144,17 +145,17 @@
         <h2>Information</h2>
         <dl>
             <dt>Studio:</dt>
-            <dd>Warner Bros.</dd>
+            <dd>Warner Bros. Pictures</dd>
             <dt>Budget:</dt>
-            <dd>$200 million</dd>
+            <dd>$200 million Estimated</dd>
             <dt>Box Office:</dt>
-            <dd>$206.4 million</dd>
+            <dd>TBD</dd>
         </dl>
 
         <div id="social-links">
-            <a href="#" aria-label="Facebook"><span>f</span></a>
-            <a href="#" aria-label="Twitter"><span>𝕏</span></a>
-            <a href="#" aria-label="Instagram"><span>📷</span></a>
+            <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+            <a href="#" aria-label="Twitter"><i class="fab fa-x-twitter"></i></a>
+            <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
         </div>
 
         <p id="watch-trailer"><a href="#">Watch Trailer</a></p>
