--- a/joker.html
+++ b/joker.html
@@ -54,9 +54,9 @@
                     <div class="review-box">
                         <p class="review-quote">"A mesmerizing yet deeply flawed sequel that struggles to find its footing. The musical elements feel forced."</p>
                         <p class="review-critic">- David Ehrlich, IndieWire</p>
-                        <div class="star-rating" role="img" aria-label="Rating: 1 out of 5 stars">
+                        <div class="star-rating">
                             <img src="Assets_folder/star_full.png" alt="" />
-                            <img src="Assets_folder/star_nonfull.png" alt="" />
+                            <img src="Assets_folder/star_full.png" alt="" />
                             <img src="Assets_folder/star_nonfull.png" alt="" />
                             <img src="Assets_folder/star_nonfull.png" alt="" />
                             <img src="Assets_folder/star_nonfull.png" alt="" />
@@ -66,7 +66,7 @@
                     <div class="review-box">
                         <p class="review-quote">"Visually stunning but narratively hollow. The attempt to blend gritty realism with musical fantasy falls flat."</p>
                         <p class="review-critic">- Peter Debruge, Variety</p>
-                        <div class="star-rating" role="img" aria-label="Rating: 3 out of 5 stars">
+                        <div class="star-rating">
                             <img src="Assets_folder/star_full.png" alt="" />
                             <img src="Assets_folder/star_full.png" alt="" />
                             <img src="Assets_folder/star_full.png" alt="" />
@@ -86,10 +86,10 @@
                     <div class="review-box">
                         <p class="review-quote">"A daring experiment that doesn't quite pay off. The chemistry between the leads is undeniable."</p>
                         <p class="review-critic">- Justin Chang, LA Times</p>
-                        <div class="star-rating" role="img" aria-label="Rating: 3 out of 5 stars">
+                        <div class="star-rating">
                             <img src="Assets_folder/star_full.png" alt="" />
                             <img src="Assets_folder/star_full.png" alt="" />
-                            <img src="Assets_folder/star_full.png" alt="" />
+                            <img src="Assets_folder/star_nonfull.png" alt="" />
                             <img src="Assets_folder/star_nonfull.png" alt="" />
                             <img src="Assets_folder/star_nonfull.png" alt="" />
                             <span class="review-score">2/5</span>
@@ -98,7 +98,7 @@
                     <div class="review-box">
                         <p class="review-quote">"Joker: Folie à Deux is a beautifully shot, yet ultimately frustrating experience. It's a film at war with itself."</p>
                         <p class="review-critic">- Robbie Collin, Telegraph</p>
-                        <div class="star-rating" role="img" aria-label="Rating: 3 out of 5 stars">
+                        <div class="star-rating">
                             <img src="Assets_folder/star_full.png" alt="" />
                             <img src="Assets_folder/star_full.png" alt="" />
                             <img src="Assets_folder/star_full.png" alt="" />
@@ -153,9 +153,9 @@
         </dl>
 
         <div id="social-links">
-            <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-            <a href="#" aria-label="Twitter"><i class="fab fa-x-twitter"></i></a>
-            <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-x-twitter"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
         </div>
 
         <p id="watch-trailer"><a href="#">Watch Trailer</a></p>
