Images issue fix

--- a/joker.html
+++ b/joker.html
@@ -4,7 +4,6 @@
     <title>Joker: Folie à Deux Review (2024)</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link rel="stylesheet" type="text/css" href="movie.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
 </head>
 <body>
 <div id="banner">
@@ -153,9 +152,9 @@
         </dl>
 
         <div id="social-links">
-            <a href="#"><i class="fab fa-facebook-f"></i></a>
-            <a href="#"><i class="fab fa-x-twitter"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><img src="Assets_folder/facebook-brands-solid-full.svg" alt="Facebook" /></a>
+            <a href="#"><img src="Assets_folder/twitter-brands-solid-full.svg" alt="Twitter" /></a>
+            <a href="#"><img src="Assets_folder/instagram-brands-solid-full.svg" alt="Instagram" /></a>
         </div>
 
         <p id="watch-trailer"><a href="#">Watch Trailer</a></p>
@@ -167,8 +166,8 @@
 </div>
 
 <div id="validators">
-    <a href="https://validator.w3.org/check/referer"><img src="https://www.w3.org/Icons/valid-xhtml11" alt="Valid XHTML 1.1" /></a>
-    <a href="https://jigsaw.w3.org/css-validator/check/referer"><img src="https://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS" /></a>
+    <a href="https://validator.w3.org/check?uri=https://codd.cs.gsu.edu/~pchanna1/web/hw/02/joker.html"><img src="Assets_folder/html-validator.png" alt="Valid XHTML 1.1" /></a>
+    <a href="https://jigsaw.w3.org/css-validator/validator?uri=https://codd.cs.gsu.edu/~pchanna1/web/hw/02/joker.html"><img src="Assets_folder/css-validator.png" alt="Valid CSS" /></a>
 </div>
 </body>
 </html>
